--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/* Color palette */
+/* Color-palette */
 :root{
     --color-primary: #2584ff;
     --color-secondary: #00d9ff;
@@ -6,31 +6,37 @@
     --color-headings: #1b0760;
     --color-body: #918ca4;
 }
-/* Typography */
 
+/* // ----- Typography ----- */
 html{
     /* 62.5% of 16px = 10px */
     font-size: 62,5%;
 }
+
 body{
     font-family: Inter, Arial, Helvetica, sans-serif;
     color: var(--color-body);
     font-size: 2.4rem;
     line-height: 1.5;
 }
+
 h1, h2, h3{
     color: var(--color-headings);
     margin-bottom: 1rem;
 }
+
 h1{
     font-size: 7rem;
 }
+
 h2{
     font-size: 4rem;
 }
+
 h3{
     font-size: 3rem;
 }
+
 p{
     margin-top: 0;
 }
@@ -53,7 +59,7 @@ p{
     }
 }
 
-/* Links */
+/* // ----- Links ----- */
 a {
     text-decoration: none;
 }
@@ -81,7 +87,7 @@ a {
     }
 }
 
-/* Badges */
+/* // ----- Badges ----- */
 
 .badge {
     border-radius: 20px;
@@ -115,7 +121,7 @@ a {
     }
 }
 
-/* Lists */
+/* // ----- Lists ----- */
 
 .list {
     list-style: none;
@@ -144,7 +150,7 @@ a {
     }
 }
 
-/* Icons */
+/* // ----- Icons ----- */
 .icon {
     width: 40px;
     height: 40px;
@@ -163,3 +169,6 @@ a {
     justify-content: center;
     align-items: center;
 }
+
+/* // ----- Buttons ----- */
+
