--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
 
 *, *::after, *::before{
     box-sizing: border-box;
-    font-size: 62,5%;
+    font-size: 62.5%;
 }
 
 /* // ----- Typography ----- */
@@ -328,11 +328,19 @@ a {
     color: #fff;
   }
   
+.card--primary .badge--primary {
+    background: #126de4;
+}
+
   .card--secondary .badge--secondary {
     background: #02cdf1;
   }
 
 /* // ----- Plans ----- */
+
+.plan {
+    transition: transform .2s ease-out;
+}
 
 .plan__name {
     color: #fff;
@@ -363,6 +371,10 @@ a {
 .plan .list__item {
     margin-bottom: 2rem;
 }
+.plan--popular {
+    transform: scale(1.1);
+}
+
 
 .plan--popular .card__header {
     position: relative;
@@ -375,7 +387,14 @@ a {
     position: absolute;
     top: -5px;
     right: 5%;
+}
 
+.plan:hover {
+    transform: scale(1.05);
+}
+
+.plan--popular:hover {
+    transform: scale(1.15);
 }
 
 @media screen and (min-width: 1024px) {
@@ -491,7 +510,7 @@ a {
 
 .testimonial__image > img{
     width: 100%;
-}
+}pl
 
 .testimonial__image > .icon-container {
     position: absolute;
@@ -734,4 +753,15 @@ a {
     .block-domain__prices {
       grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     }
+  }
+
+  /* // ----- Plans Block ----- */
+
+  .block-plans .grid {
+    gap: 8rem 4rem;
+  }
+
+  .block-plans .card {
+    max-width: 500px;
+    margin: 0 auto;
   }
