CSS and HTML Validation

--- a/css/styles.css
+++ b/css/styles.css
@@ -632,9 +632,9 @@
     color: #fff;
   }
   
-  .block--skewed-right {
+.block--skewed-right {
     padding-bottom: calc(var(--padding-vertical) + 4rem);
-    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 95%);
   }
   
   .block--skewed-left {
@@ -888,6 +888,7 @@
     }
   }
 
+  /* callout signup */
   .callout-signup {
     transform: translateY(5rem);
   }
